--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Face Detection using Artifical Intelligence</title>
+    <title>Face Detection using Artificial Intelligence</title>
 </head>
 <body>
+    Face Detection Attention System
     
 </body>
 </html>
