--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Face Detection using Artificial Intelligence</title>
 </head>
 <body>
-    Face Detection Attention System
+    Face Detection Attention System made using AI
     
 </body>
 </html>
